testing some stuff

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,9 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 
 #hibernate.hbm2ddl.auto=update
 spring.jpa.hibernate.ddl-auto=create-drop
+
+
+#jOOQ Configuration
+#spring.jooq.sql-dialect=H2
+
+
